--- a/template.yml
+++ b/template.yml
@@ -8,11 +8,11 @@ Resources:
             SecurityGroups:
                 - !Ref InstanceSecurityGroup
             # Change this, as applicable to you
-            KeyName: udacity
+            KeyName: keyx
             # Change this, as applicable to you
             # You may need to find out what instance types are available in your region - use https://cloud-images.ubuntu.com/locator/ec2/
-            ImageId: "ami-09e67e426f25ce0d7"
-            InstanceType: t3.micro
+            ImageId: "ami-052efd3df9dad4825"
+            InstanceType: t2.micro
     InstanceSecurityGroup:
         Type: "AWS::EC2::SecurityGroup"
         Properties:
