--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,21 +6,39 @@ orbs:
     # aws-cli: circleci/aws-cli@2.0.3
 # Define the jobs we want to run for this project
 jobs:
-    create_infrastructure:
-        docker:
-            - image: amazon/aws-cli
-        steps:
-            - checkout
-            - run:
-                  name: Create Cloudformation Stack
-                  command: |
-                      aws cloudformation deploy \
-                        --template-file template.yml \
-                        --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
-                        --region us-east-1
+    # create_infrastructure:
+    #     docker:
+    #         - image: amazon/aws-cli
+    #     steps:
+    #         - checkout
+    #         - run:
+    #               name: Create Cloudformation Stack
+    #               command: |
+    #                   aws cloudformation deploy \
+    #                     --template-file template.yml \
+    #                     --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
+    #                     --region us-east-1
+    configure_infrastructure: 
+      docker:
+        - image: python:3.7-alpine3.11
+      steps:
+        - checkout
+        - add_ssh_keys:
+                # You can get this ID in the section where you registered the SSH Key
+                fingerprints: ["15:7e:73:33:3d:53:e5:98:4e:8f:3f:e3:01:4e:9e:31"] 
+        - run:
+            name: Install Ansible
+            command: |
+              apk add --update ansible
+              # Install Ansible
+              
+        - run:
+            name: Run Playbook and Configure server
+            command: |
+              ansible-playbook -i inventory /setup/tasks/main.yml
 # Sequential workflow
 workflows:
     # Name the workflow
     myWorkflow:
         jobs:
-            - create_infrastructure
+            - configure_infrastructure
