--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
         - run:
             name: Run Playbook and Configure server
             command: |
-              ansible-playbook -i inventory /setup/tasks/main.yml
+              ansible-playbook -i inventory main2.yml
 # Sequential workflow
 workflows:
     # Name the workflow
