--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
         - checkout
         - add_ssh_keys:
                 # You can get this ID in the section where you registered the SSH Key
-                fingerprints: ["15:7e:73:33:3d:53:e5:98:4e:8f:3f:e3:01:4e:9e:31"] 
+                fingerprints: ["9f:b1:24:6f:e1:d6:25:f5:35:1c:df:85:f1:06:69:4f"] 
         - run:
             name: Install Ansible
             command: |
