--- a/main2.yml
+++ b/main2.yml
@@ -1,34 +1,20 @@
 ---
-- name: "update apt packages."
-  become: yes
+- name: "upgrade packages."
+  become: true
   apt:
-    update_cache: yes
+    upgrade: "yes"
 
-- name: "upgrade packages"
-  become: yes
-  apt:
-    upgrade: yes
-
-- name: "install npm and node"
-  become: yes
+- name: "install dependencies."
+  become: true
   apt:
     name: ["nodejs", "npm"]
+    state: latest
+    update_cache: yes
 
 - name: "install pm2"
-  become: yes
+  become: true
   npm:
     name: pm2
     global: yes
-
-- name: create web directory
-  file:
-    path: ~/web
-    state: directory
-
-- name: copy web file
-  copy:
-    src: index.js
-    dest: ~/web/index.js
-
-- name: run server
-  shell: pm2 start ~/web/index.js -f
+    production: yes
+    state: present
