--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
         - checkout
         - add_ssh_keys:
                 # You can get this ID in the section where you registered the SSH Key ok
-                fingerprints: ["9f:b1:24:6f:e1:d6:25:f5:35:1c:df:85:f1:06:69:4f"] 
+                fingerprints: ["cc:78:26:e4:09:6d:68:9c:66:b9:32:15:b5:cd:9d:28"] 
         - run:
             name: Install Ansible
             command: |
