--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,12 +20,12 @@ jobs:
     #                     --region us-east-1
     configure_infrastructure: 
       docker:
-        - image: python:3.7-alpine3.11
+        - image: cimg/python:3.10.6
       steps:
         - checkout
         - add_ssh_keys:
                 # You can get this ID in the section where you registered the SSH Key ok
-                fingerprints: ["cc:78:26:e4:09:6d:68:9c:66:b9:32:15:b5:cd:9d:28"] 
+                fingerprints: ["9f:b1:24:6f:e1:d6:25:f5:35:1c:df:85:f1:06:69:4f"] 
         - run:
             name: Install Ansible
             command: |
