--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,5 @@
 version: 2.1
+gather_facts: false
 # Use a package of configuration called an orb.
 orbs:
     # Choose either one of the orbs below
@@ -20,7 +21,7 @@ jobs:
     #                     --region us-east-1
     configure_infrastructure: 
       docker:
-        - image: cimg/python:3.10.6
+        - image: python:3.7-alpine3.11
       steps:
         - checkout
         - add_ssh_keys:
