--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,27 +19,44 @@ jobs:
     #                     --template-file template.yml \
     #                     --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
     #                     --region us-east-1
-    configure_infrastructure: 
-      docker:
-        - image: python:3.7-alpine3.11
-      steps:
-        - checkout
-        - add_ssh_keys:
-                # You can get this ID in the section where you registered the SSH Key ok
-                fingerprints: ["9f:b1:24:6f:e1:d6:25:f5:35:1c:df:85:f1:06:69:4f"] 
-        - run:
-            name: Install Ansible
-            command: |
-              # Install Ansible
-              apk add --update ansible
+    # configure_infrastructure: 
+    #   docker:
+    #     - image: python:3.7-alpine3.11
+    #   steps:
+    #     - checkout
+    #     - add_ssh_keys:
+    #             # You can get this ID in the section where you registered the SSH Key ok
+    #             fingerprints: ["9f:b1:24:6f:e1:d6:25:f5:35:1c:df:85:f1:06:69:4f"] 
+    #     - run:
+    #         name: Install Ansible
+    #         command: |
+    #           # Install Ansible
+    #           apk add --update ansible
               
+    #     - run:
+    #         name: Run Playbook and Configure server
+    #         command: |
+    #           ansible-playbook -i inventory main-remote.yml
+# Exercise: Smoke Testing
+      smoke_test:
+      docker:
+        - image: alpine:latest
+      steps:
+        - run: apk add --update curl
         - run:
-            name: Run Playbook and Configure server
+            name: smoke test
             command: |
-              ansible-playbook -i inventory main-remote.yml
+              URL="https://blog.udacity.com/"
+              # Test if website exists
+              if curl -s --head ${URL} 
+              then
+                return 0
+              else
+                return 1
+              fi
 # Sequential workflow
 workflows:
     # Name the workflow
     myWorkflow:
         jobs:
-            - configure_infrastructure
+            - smoke_test
