--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,32 @@
 version: 2.1
 gather_facts: false
 # Use a package of configuration called an orb.
-orbs:
-    # Choose either one of the orbs below
-    # welcome: circleci/welcome-orb@0.4.1
-    # aws-cli: circleci/aws-cli@2.0.3
+commands:
+   # Exercise - Rollback
+   destroy_environment:
+     steps:
+       - run:
+           name: Destroy environment
+           # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
+           # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
+           when: on_fail
+           command: |
+             aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7}
+
 # Define the jobs we want to run for this project
 jobs:
-    # create_infrastructure:
-    #     docker:
-    #         - image: amazon/aws-cli
-    #     steps:
-    #         - checkout
-    #         - run:
-    #               name: Create Cloudformation Stack
-    #               command: |
-    #                   aws cloudformation deploy \
-    #                     --template-file template.yml \
-    #                     --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
-    #                     --region us-east-1
+    create_infrastructure:
+        docker:
+            - image: amazon/aws-cli
+        steps:
+            - checkout
+            - run:
+                  name: Create Cloudformation Stack
+                  command: |
+                      aws cloudformation deploy \
+                        --template-file template.yml \
+                        --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
+                        --region us-east-1
     # configure_infrastructure: 
     #   docker:
     #     - image: python:3.7-alpine3.11
@@ -38,25 +46,36 @@ jobs:
     #         command: |
     #           ansible-playbook -i inventory main-remote.yml
 # Exercise: Smoke Testing
+      # smoke_test:
+      #   docker:
+      #     - image: alpine:latest
+      #   steps:
+      #     - run: apk add --update curl
+      #     - run:
+      #         name: smoke test
+      #         command: |
+      #           URL="https://blog.udacity.com/"
+      #           # Test if website exists
+      #           if curl -s --head ${URL} 
+      #           then
+      #             return 0
+      #           else
+      #             return 1
+      #           fi
       smoke_test:
         docker:
           - image: alpine:latest
         steps:
-          - run: apk add --update curl
           - run:
-              name: smoke test
-              command: |
-                URL="https://blog.udacity.com/"
-                # Test if website exists
-                if curl -s --head ${URL} 
-                then
-                  return 0
-                else
-                  return 1
-                fi
+              name: Test job
+              # Fail the job intentionally to simulate an error.
+              command:  return 1
+          - destroy_environment  
+      # Exercise - Rollback
 # Sequential workflow
 workflows:
     # Name the workflow
     myWorkflow:
         jobs:
+            - create_infrastructure
             - smoke_test
