--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,4 +78,5 @@ workflows:
     myWorkflow:
         jobs:
             - create_infrastructure
-            - smoke_test
+            - smoke_test:
+                requires: [create_infrastructure]
