--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,8 @@ gather_facts: false
 commands:
    # Exercise - Rollback
    destroy_environment:
+      docker:
+          - image: amazon/aws-cli
      steps:
        - run:
            name: Destroy environment
@@ -25,7 +27,7 @@ jobs:
                   command: |
                       aws cloudformation deploy \
                         --template-file template.yml \
-                        --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
+                        --stack-name mmyStack-${CIRCLE_WORKFLOW_ID:0:5} \
                         --region us-east-1
     # configure_infrastructure: 
     #   docker:
