--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
                         --region us-east-1
             - run: return 1
             - destroy_environment
+              when: on_fail
  
     # configure_infrastructure: 
     #   docker:
@@ -72,7 +73,7 @@ jobs:
               name: Test job
               # Fail the job intentionally to simulate an error.
               command:  return 1
-          - destroy_environment  
+          - destroy_environment
       # Exercise - Rollback
 # Sequential workflow
 workflows:
