--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
                   command: |
                       aws cloudformation deploy \
                         --template-file template.yml \
-                        --stack-name mmyStack-${CIRCLE_WORKFLOW_ID:0:5} \
+                        --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7} \
                         --region us-east-1
             - run: return 1
             - destroy_environment
